--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-native-smooth-picker": "^1.1.5",
+    "react-native-wheel-scrollview-picker": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
