--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-screens": "^3.22.0",
     "react-native-smooth-picker": "^1.1.5",
-    "react-native-wheel-scrollview-picker": "^2.0.1"
+    "react-native-wheel-scrollview-picker": "^2.0.1",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
 }
