--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
+    "expo-image-picker": "^14.1.1",
     "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
-
+    "react-native-reanimated": "^3.3.0",
     "react-native-screens": "^3.22.0",
     "react-native-segmented-picker": "^2.0.2",
     "react-native-smooth-picker": "^1.1.5",
-
     "react-native-value-picker": "^0.1.4",
     "react-native-wheel-scroll-picker": "^0.2.4",
     "react-native-wheel-scrollview-picker": "^2.0.1",
