--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.0",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -21,8 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "^3.3.0",
-    "react-native-screens": "^3.22.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-screens": "~3.20.0",
     "react-native-value-picker": "^0.1.4",
     "react-native-wheel-scroll-picker": "^0.2.4",
     "styled-components": "^6.0.2"
